--- a/test1/pubspec.yaml
+++ b/test1/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   adobe_xd: ^2.0.1
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/opus_logo.png
+    - assets/images/opus_logo.jpg
+    - assets/images/opus_logo.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
