--- a/test2/config/config.yaml
+++ b/test2/config/config.yaml
@@ -1,3 +1,12 @@
+# Interfaces
+interfaces:
+  - mqtt: 
+      host: "127.0.0.1"
+      port: 1883
+      username: "mqtt"
+      password: "mqtt"
+      client_id: "opus-server"
+  
 # Drivers
 drivers:
   - sonoff
