--- a/test2/config/config.yaml
+++ b/test2/config/config.yaml
@@ -1,7 +1,7 @@
 # Interfaces
 interfaces: # Interfaces are expected to be configurable, so don't forget the colon at the end of the line
   - mqtt: 
-      host: "192.168.0.2"
+      host: "opus-server"
       port: 1883
       username: ""
       password: ""
