--- a/test2/config/config.yaml
+++ b/test2/config/config.yaml
@@ -1,7 +1,16 @@
 # Interfaces
 interfaces: # Interfaces are expected to be configurable, so don't forget the colon at the end of the line
-  - mqtt: 
+  - mqtt<local>: 
+      log_id: "mqtt<local>"
       host: "opus-server"
+      port: 1883
+      username: ""
+      password: ""
+      client_id: "opus-server"
+
+  - mqtt<maestro>:
+      log_id: "mqtt<maestro>"
+      host: "168.75.84.130"
       port: 1883
       username: ""
       password: ""
