--- a/test2/requirements.txt
+++ b/test2/requirements.txt
@@ -1,12 +1,69 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
+annotated-types==0.6.0   
+anyio==4.3.0
 attrs==23.2.0
 Brotli==1.1.0
-frozenlist==1.4.1
+certifi==2024.2.2        
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+colorlog==6.8.2
+contourpy==1.2.1
+cycler==0.12.1
+fastapi==0.110.1
+fonttools==4.50.0        
+frozenlist==1.4.1        
+getmac==0.9.4
+gevent==24.2.1
+greenlet==3.0.3
+guppy3==3.1.4.post1      
+h11==0.14.0
 idna==3.7
 ifaddr==0.2.0
+kiwisolver==1.4.5        
+markdown-it-py==3.0.0    
+matplotlib==3.8.4
+mdurl==0.1.2
+MouseInfo==0.1.3
+mss==9.0.1
 multidict==6.0.5
+numpy==1.26.4
+opencv-python==4.9.0.80
+packaging==24.0
 paho-mqtt==2.1.0
+pillow==10.3.0
+psutil==5.9.8
+PyAudio==0.2.14
+PyAutoGUI==0.9.54
+pycparser==2.22
+pydantic==2.6.4
+pydantic_core==2.16.3
+PyGetWindow==0.0.9
+Pygments==2.17.2
+Pympler==1.0.1
+PyMsgBox==1.0.9
+pyparsing==3.1.2
+pyperclip==1.8.2
+PyRect==0.2.0
+PyScreeze==0.1.30
+pyserial==3.5
+python-dateutil==2.9.0.post0
+pytweening==1.2.0
 PyYAML==6.0.1
+reloadium==1.4.1
+requests==2.31.0
+rich==13.7.1
+setuptools==69.5.1
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.30
+starlette==0.37.2
+typing_extensions==4.10.0
+urllib3==2.2.1
+uvicorn==0.29.0
 yarl==1.9.4
 zeroconf==0.132.2
+zope.event==5.0
+zope.interface==6.3
