--- a/test5/requirements.txt
+++ b/test5/requirements.txt
@@ -1,5 +1,6 @@
-pydantic==2.7.2
+pydantic==1.10
 colorlog==6.8.2
-fastapi==0.111.0
-fastapi-authlib==0.0.4
-httpx==0.27.0
+fastapi==0.95.0
+httpx>=0.24.0
+psycopg2>=2.9.9
+fastapi-authlib>=0.0.4
