--- a/test2/config/config.yaml
+++ b/test2/config/config.yaml
@@ -2,7 +2,7 @@
 interfaces: # Interfaces are expected to be configurable, so don't forget the colon at the end of the line
   - mqtt<local>: 
       log_id: "mqtt<local>"
-      host: "magi.local"
+      host: "192.168.15.120"
       port: 1883
       username: ""
       password: ""
