--- a/test5/.env
+++ b/test5/.env
@@ -1,9 +1,9 @@
 POSTGRES_USER=maestro
-POSTGRES_PASSWORD=Qwerty@12345
+POSTGRES_PASSWORD=e0b154c-ffff-4bd8-b267-8060d9bf8f06
 POSTGRES_DB=maestro
 PGADMIN_DEFAULT_EMAIL="victor.alicino@gmail.com"
 PGADMIN_DEFAULT_PASSWORD="Qwerty@1235"
-DB_URL=postgresql://maestro:Qwerty@12345@144.22.195.55:5432/maestro
+DB_URL=postgresql://maestro:e0b154c-ffff-4bd8-b267-8060d9bf8f06@ssh.alicino.com.br:5432/maestro
 TEST_MODE=False
 SECRET_KEY=
 ALGORITHM=HS256
