--- a/test5/.env
+++ b/test5/.env
@@ -1,9 +1,16 @@
-POSTGRES_USER=maestro
+NAME="maestro"
+SERVER_IP4="144.22.195.55"
+
+# Remote Database
+POSTGRES_USER=maestro_server
 POSTGRES_PASSWORD=e0b154c-ffff-4bd8-b267-8060d9bf8f06
-POSTGRES_DB=maestro
-PGADMIN_DEFAULT_EMAIL="victor.alicino@gmail.com"
-PGADMIN_DEFAULT_PASSWORD="Qwerty@1235"
-DB_URL=postgresql://maestro:e0b154c-ffff-4bd8-b267-8060d9bf8f06@ssh.alicino.com.br:5432/maestro
+POSTGRES_DB=maestro_system
+
+DB_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${SERVER_IP4}:5432/${POSTGRES_DB}
 TEST_MODE=False
+
 SECRET_KEY=
 ALGORITHM=HS256
+
+# MQTT Communication
+CLOUD-MQTT=${SERVER_IP4}
