--- a/test5/.env
+++ b/test5/.env
@@ -1,16 +1,12 @@
 NAME="maestro"
 SERVER_IP4="144.22.195.55"
+DEBUG_MODE=False
 
 # Remote Database
-POSTGRES_USER=maestro_server
-POSTGRES_PASSWORD=e0b154c-ffff-4bd8-b267-8060d9bf8f06
-POSTGRES_DB=maestro_system
-
-DB_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${SERVER_IP4}:5432/${POSTGRES_DB}
-TEST_MODE=False
+DB_URL=postgresql://maestro_server:e0b154c-ffff-4bd8-b267-8060d9bf8f06@144.22.195.55:5432/maestro_system
 
 SECRET_KEY=
 ALGORITHM=HS256
 
 # MQTT Communication
-CLOUD-MQTT=${SERVER_IP4}
+CLOUD-MQTT="144.22.195.55"
