--- a/test2/config/config.yaml
+++ b/test2/config/config.yaml
@@ -5,7 +5,7 @@ name: opus-server
 interfaces: # Interfaces are expected to be configurable, so don't forget the colon at the end of the line
   - mqtt<local>: 
       log_id: "mqtt<local>"
-      host: "192.168.15.120"
+      host: "localhost"
       port: 1883
       username: ""
       password: ""
