--- a/test2/config/config.yaml
+++ b/test2/config/config.yaml
@@ -13,7 +13,7 @@ interfaces: # Interfaces are expected to be configurable, so don't forget the co
 
   - mqtt<maestro>:
       log_id: "mqtt<maestro>"
-      host: "144.22.195.55"
+      host: "ssh.alicino.com.br"
       port: 1883
       username: ""
       password: ""
