--- a/test2/env/pyvenv.cfg
+++ b/test2/env/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\victo\AppData\Local\Programs\Python\Python312
+home = C:\Python312
 include-system-site-packages = false
 version = 3.12.2
-executable = C:\Users\victo\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\victo\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\victo\Documents\GitRepos\tcc_1\test2\env
+executable = C:\Python312\python.exe
+command = C:\Python312\python.exe -m venv C:\Users\victo\Documents\GitRepos\tcc_1\test2\env
