--- a/test2/config/config.yaml
+++ b/test2/config/config.yaml
@@ -1,5 +1,5 @@
 # Basic Configs
-name: opus-server
+name: opus-server-5be2
 
 # Interfaces
 interfaces: # Interfaces are expected to be configurable, so don't forget the colon at the end of the line
