--- a/test3/conductor/android/gradle.properties
+++ b/test3/conductor/android/gradle.properties
@@ -25,6 +25,9 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+# Enable AAPT2 PNG crunching
+android.enablePngCrunchInReleaseBuilds=true
+
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
@@ -53,4 +56,4 @@ expo.webp.animated=false
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
-expo.useLegacyPackaging=false
+#expo.useLegacyPackaging=false
